[i18n][view] Content and Content Translation
translation and UI fixes

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/models/content_translation/de.yml
+++ b/config/locales/models/content_translation/de.yml
@@ -7,4 +7,5 @@ de:
     attributes:
       content_translation:
         language: Sprache
+        translation: Übersetzung
         notes: Notizen
