[i18n][view][control] minor fixes
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/views/archive/de.yml
+++ b/config/locales/views/archive/de.yml
@@ -9,4 +9,4 @@ de:
         edit: '%{what} bearbeiten'
         new: 'Neues %{what} erstellen'
       flash:
-        created_entity: 'Neues %{what} mit ID %{id} wurde erstellt.'
+        created_entity: 'Neues Archiv mit ID %{id} wurde erstellt.'
