--- a/config/locales/views/content_translation/de.yml
+++ b/config/locales/views/content_translation/de.yml
@@ -3,3 +3,5 @@ de:
     content_translation:
       modals:
         unsaved: 'ungesichert'
+      flash:
+        created_entity: 'Neue Übersetzung mit ID %{id} wurde erstellt.'
