[i18n][view] completed for Deeds
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/views/de.yml
+++ b/config/locales/views/de.yml
@@ -1,6 +1,7 @@
 de:
   views:
     non_associated: 'keine verknüpft'
+    unknown: 'unbekannt'
     actions:
       refresh_table_btn_title: 'Tabelle aktualisieren'
       show_details: 'Details anzeigen'
