[i18n] further translations - now complete?
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/models/mention/de.yml
+++ b/config/locales/models/mention/de.yml
@@ -6,3 +6,8 @@ de:
         other: Nennungen
     attributes:
       mention:
+        deed: Urkunde
+        person: Person
+        place: Ort
+        role: Rolle
+        notes: Notizen
