--- a/config/locales/views/de.yml
+++ b/config/locales/views/de.yml
@@ -2,6 +2,8 @@ de:
   views:
     non_associated: 'keine verknüpft'
     unknown: 'unbekannt'
+    no_notes: 'keine Notizen'
+    linked_with: 'verknüpft mit %{what}'
     actions:
       refresh_table_btn_title: 'Tabelle aktualisieren'
       show_details: 'Details anzeigen'
