--- a/config/locales/views/place/de.yml
+++ b/config/locales/views/place/de.yml
@@ -1,10 +1,14 @@
 de:
   views:
     place:
+      show_linked_mentions: 'verknüpfte Nennungen'
+      show_linked_people: 'verknüpfte Personen'
+      show_linked_roles: 'verknüpfte Rollen'
+      show_linked_deeds: 'verknüpfte Urkunden'
       actions:
         add_new_btn_title: 'Neuen Ort hinzufügen'
       modals:
         edit: '%{what} bearbeiten'
         new: 'Neuen %{what} erstellen'
       flash:
-        created_entity: 'Neuer %{what} mit ID %{id} wurde erstellt.'
+        created_entity: 'Neuer Ort mit ID %{id} wurde erstellt.'
