--- a/config/locales/views/role/de.yml
+++ b/config/locales/views/role/de.yml
@@ -1,10 +1,14 @@
 de:
   views:
     role:
+      show_linked_mentions: 'verknüpfte Nennungen'
+      show_linked_people: 'verknüpfte Personen'
+      show_linked_places: 'verknüpfte Orte'
+      show_linked_deeds: 'verknüpfte Urkunden'
       actions:
         add_new_btn_title: 'Neue Rolle hinzufügen'
       modals:
         edit: '%{what} bearbeiten'
         new: 'Neue %{what} erstellen'
       flash:
-        created_entity: 'Neue %{what} mit ID %{id} wurde erstellt.'
+        created_entity: 'Neue Rolle mit ID %{id} wurde erstellt.'
