[i18n] cleanup and streamline translations
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/helpers/en.yml
+++ b/config/locales/helpers/en.yml
@@ -1,1 +1,9 @@
 en:
+  helpers:
+    confirmation:
+      delete: "Do you really want to delete this entity?"
+    submit:
+      update: "Update"
+      create: "Create"
+    delete: "Delete"
+    abort: "Abort"
