--- a/config/locales/views/document/de.yml
+++ b/config/locales/views/document/de.yml
@@ -1,14 +1,9 @@
 de:
   views:
     document:
-      linked_collection: 'mit Sammlung verknüpft'
-      linked_deed: 'mit Urkunde verknüpft'
-      show_linked_collections: 'verknüpfte Sammlungen'
+      none_selected: "kein Dokument ausgewählt"
       actions:
         add_new_btn_title: 'Neues Dokument hinzufügen'
       modals:
         edit: '%{what} bearbeiten'
         new: 'Neues %{what} erstellen'
-        no_collection_selected: 'keine Sammlung ausgewählt'
-        deassociate_collection: 'Verknüpfung mit Sammlung entfernen'
-        search_collections: 'Sammlung suchen'
