--- a/config/locales/views/mention/de.yml
+++ b/config/locales/views/mention/de.yml
@@ -1,6 +1,9 @@
 de:
   views:
     mention:
+      as_role: "als"
+      at_place: "von"
+      in_deed: "in"
       no_deed_referenced: 'keine Urkunde verknüpft'
       no_person_referenced: 'keine Person verknüpft'
       no_place_referenced: 'kein Ort verknüpft'
@@ -10,11 +13,3 @@ de:
       modals:
         edit: '%{what} bearbeiten'
         new: 'Neue %{what} erstellen'
-        no_deed_selected: 'keine Urkunde ausgewählt'
-        no_person_selected: 'keine Person ausgewählt'
-        no_place_selected: 'kein Ort ausgewählt'
-        no_role_selected: 'keine Rolle ausgewählt'
-        search_deed: 'Urkunde suchen'
-        search_person: 'Person suchen'
-        search_place: 'Ort suchen'
-        search_role: 'Rolle suchen'
