--- a/config/locales/views/content/de.yml
+++ b/config/locales/views/content/de.yml
@@ -1,8 +1,7 @@
 de:
   views:
     content:
-      show_deed: 'Urkunde anzeigen'
-      show_translations: 'Übersetzungen anzeigen'
+      no_translations: "keine Übersetzungen"
       actions:
         add_new_btn_title: 'Neuen Inhalt hinzufügen'
       modals:
