[i18n] add missing English translations
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/helpers/de.yml
+++ b/config/locales/helpers/de.yml
@@ -1,9 +1,9 @@
 de:
   helpers:
     confirmation:
-      delete: 'Dieses Element wirklich löschen?'
+      delete: "Dieses Element wirklich löschen?"
     submit:
-      create: 'Erstellen'
-      update: 'Speichern'
-    abort: 'Abbrechen'
-    delete: 'Löschen'
+      create: "Erstellen"
+      update: "Speichern"
+    abort: "Abbrechen"
+    delete: "Löschen"
