--- a/config/locales/models/content/de.yml
+++ b/config/locales/models/content/de.yml
@@ -2,13 +2,13 @@ de:
   activerecord:
     models:
       content:
-        one: Inhalt
-        other: Inhalte
+        one: "Inhalt"
+        other: "Inhalte"
     attributes:
       content:
-        content: Inhalt
-        language: Sprache
+        content: "Inhalt"
+        language: "Sprache"
         languages:
-          latin: Latein
-          old_german: Altdeutsch
-          contemporary_german: Hochdeutsch
+          latin: "Latein"
+          old_german: "Altdeutsch"
+          contemporary_german: "Hochdeutsch"
