--- a/config/locales/models/document/de.yml
+++ b/config/locales/models/document/de.yml
@@ -2,15 +2,15 @@ de:
   activerecord:
     models:
       document:
-        one: Dokument
-        other: Dokumente
+        one: "Dokument"
+        other: "Dokumente"
     attributes:
       document:
-        title: Title
-        document_type: Typ
-        notes: Notizen
+        title: "Titel"
+        document_type: "Typ"
+        notes: "Notizen"
         document_types:
-          original: Original
-          transcript: Abschrift
-          print: Druck
-          digital: Digital
+          original: "Original"
+          transcript: "Abschrift"
+          print: "Druck"
+          digital: "Digital"
