--- a/config/locales/views/content/de.yml
+++ b/config/locales/views/content/de.yml
@@ -3,8 +3,8 @@ de:
     content:
       no_translations: "keine Übersetzungen"
       actions:
-        add_new_btn_title: 'Neuen Inhalt hinzufügen'
+        add_new_btn_title: "Neuen Inhalt hinzufügen"
       modals:
-        edit: '%{what} bearbeiten'
-        new: 'Neuen %{what} erstellen'
-        add_new_translation: 'Neue Übersetzung hinzufügen'
+        edit: "%{what} bearbeiten"
+        new: "Neuen %{what} erstellen"
+        add_new_translation: "Neue Übersetzung hinzufügen"
