--- a/config/locales/views/person/de.yml
+++ b/config/locales/views/person/de.yml
@@ -3,7 +3,7 @@ de:
     person:
       none_selected: "keine Person ausgewählt"
       actions:
-        add_new_btn_title: 'Neue Person hinzufügen'
+        add_new_btn_title: "Neue Person hinzufügen"
       modals:
-        edit: '%{what} bearbeiten'
-        new: 'Neue %{what} erstellen'
+        edit: "%{what} bearbeiten"
+        new: "Neue %{what} erstellen"
