--- a/config/locales/views/person/en.yml
+++ b/config/locales/views/person/en.yml
@@ -1,1 +1,9 @@
 en:
+  views:
+    person:
+      actions:
+        add_new_btn_title: "add new Person"
+      modals:
+        edit: "Edit %{what}"
+        new: "Create new %{what}"
+      none_selected: "no Person selected"
