--- a/config/locales/views/place/de.yml
+++ b/config/locales/views/place/de.yml
@@ -3,7 +3,7 @@ de:
     place:
       none_selected: "kein Ort ausgewählt"
       actions:
-        add_new_btn_title: 'Neuen Ort hinzufügen'
+        add_new_btn_title: "Neuen Ort hinzufügen"
       modals:
-        edit: '%{what} bearbeiten'
-        new: 'Neuen %{what} erstellen'
+        edit: "%{what} bearbeiten"
+        new: "Neuen %{what} erstellen"
