--- a/config/locales/views/storage/de.yml
+++ b/config/locales/views/storage/de.yml
@@ -3,7 +3,7 @@ de:
     storage:
       none_selected: "keine Bibliothek ausgewählt"
       actions:
-        add_new_btn_title: 'Neue Bibliothek hinzufügen'
+        add_new_btn_title: "Neue Bibliothek hinzufügen"
       modals:
-        edit: '%{what} bearbeiten'
-        new: 'Neue %{what} erstellen'
+        edit: "%{what} bearbeiten"
+        new: "Neue %{what} erstellen"
