--- a/config/locales/models/content_translation/de.yml
+++ b/config/locales/models/content_translation/de.yml
@@ -2,10 +2,10 @@ de:
   activerecord:
     models:
       content_translation:
-        one: Übersetzung
-        other: Übersetzungen
+        one: "Übersetzung"
+        other: "Übersetzungen"
     attributes:
       content_translation:
-        language: Sprache
-        translation: Übersetzung
-        notes: Notizen
+        language: "Sprache"
+        translation: "Übersetzung"
+        notes: "Notizen"
