--- a/config/locales/models/person/en.yml
+++ b/config/locales/models/person/en.yml
@@ -1,1 +1,15 @@
 en:
+  activerecord:
+    models:
+      person:
+        one: "Person"
+        other: "People"
+    attributes:
+      person:
+        gender: "Gender"
+        genders:
+          female: "female"
+          male: "male"
+          unknown: "unknown"
+        name: "Name"
+        notes: "Notes"
