--- a/config/locales/models/role/de.yml
+++ b/config/locales/models/role/de.yml
@@ -2,14 +2,14 @@ de:
   activerecord:
     models:
       role:
-        one: Rolle
-        other: Rollen
+        one: "Rolle"
+        other: "Rollen"
     attributes:
       role:
-        title: Titel
-        referring: Bezug
-        notes: Notizen
+        title: "Titel"
+        referring: "Bezug"
+        notes: "Notizen"
         refers_to:
-          person: Person
-          place: Ort
-          deed: Urkunde
+          person: "Person"
+          place: "Ort"
+          deed: "Urkunde"
