--- a/config/locales/views/collection/de.yml
+++ b/config/locales/views/collection/de.yml
@@ -3,7 +3,7 @@ de:
     collection:
       none_selected: "keine Sammlung ausgewählt"
       actions:
-        add_new_btn_title: 'Neue Sammlung hinzufügen'
+        add_new_btn_title: "Neue Sammlung hinzufügen"
       modals:
-        edit: '%{what} bearbeiten'
-        new: 'Neue %{what} erstellen'
+        edit: "%{what} bearbeiten"
+        new: "Neue %{what} erstellen"
