--- a/config/locales/views/de.yml
+++ b/config/locales/views/de.yml
@@ -1,26 +1,26 @@
 de:
   views:
-    non_associated: 'keine verknüpft'
-    unknown: 'unbekannt'
-    no_notes: 'keine Notizen'
-    linked_with: 'verknüpft mit %{what}'
+    non_associated: "keine verknüpft"
+    unknown: "unbekannt"
+    no_notes: "keine Notizen"
+    linked_with: "verknüpft mit %{what}"
     show_linked: "verknüpfte %{what} anzeigen"
     actions:
-      refresh_table_btn_title: 'Tabelle aktualisieren'
-      show_details: 'Details anzeigen'
-      edit_entity: '%{entity_name} bearbeiten'
-      delete_entity: '%{entity_name} löschen'
+      refresh_table_btn_title: "Tabelle aktualisieren"
+      show_details: "Details anzeigen"
+      edit_entity: "%{entity_name} bearbeiten"
+      delete_entity: "%{entity_name} löschen"
     modals:
-      close: 'Schließen'
-      refresh_associations: 'Verknüpfungen aktualisieren'
-      delete_association: 'Verknüpfung entfernen'
-      search_for_unassociated: 'nach nicht verknüpften %{what} suchen'
-      no_unassociated_found_html: 'keine nicht verknüpfte %{what} gefunden'
+      close: "Schließen"
+      refresh_associations: "Verknüpfungen aktualisieren"
+      delete_association: "Verknüpfung entfernen"
+      search_for_unassociated: "nach nicht verknüpften %{what} suchen"
+      no_unassociated_found_html: "keine nicht verknüpfte %{what} gefunden"
       unsaved: "nicht gespeichert"
       remove_association: "Verknüpfung mit %{what} entfernen"
     flash:
-      created_entity: '%{what} mit ID %{id} erfolgreich erstellt.'
-      updated_entity: '%{what} mit ID %{id} erfolgreich aktualisiert.'
-      deleted_entity: '%{what} mit ID %{id} erfolgreich gelöscht.'
+      created_entity: "%{what} mit ID %{id} erfolgreich erstellt."
+      updated_entity: "%{what} mit ID %{id} erfolgreich aktualisiert."
+      deleted_entity: "%{what} mit ID %{id} erfolgreich gelöscht."
     date: "Datum"
     no_description: "keine Beschreibung"
