--- a/config/locales/views/role/de.yml
+++ b/config/locales/views/role/de.yml
@@ -1,9 +1,9 @@
 de:
   views:
     role:
-      none_selected: "keine Rolle ausgewählt"
       actions:
-        add_new_btn_title: 'Neue Rolle hinzufügen'
+        add_new_btn_title: "Neue Rolle hinzufügen"
       modals:
-        edit: '%{what} bearbeiten'
-        new: 'Neue %{what} erstellen'
+        edit: "%{what} bearbeiten"
+        new: "Neue %{what} erstellen"
+      none_selected: "keine Rolle ausgewählt"
